plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.13'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'page.clab'
version = '0.0.1-SNAPSHOT'

bootJar {
	archivesBaseName = "clab"
	archiveFileName = "clab.jar"
	archiveVersion = "0.0.1"
}

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
	maven { url 'https://jitpack.io' }
}

dependencies {
	// Spring Project
	implementation 'org.springframework.boot:spring-boot-starter-actuator' // 모니터링
	implementation 'org.springframework.boot:spring-boot-starter-web' // 웹 MVC
	implementation 'org.springframework.boot:spring-boot-starter-validation' // 유효성 검사
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' // 템플릿 엔진
	implementation 'org.springframework.boot:spring-boot-starter-webflux' // WebFlux
	developmentOnly 'org.springframework.boot:spring-boot-devtools' // 개발 도구

	// Util
	compileOnly 'org.projectlombok:lombok' // 롬복
	annotationProcessor 'org.projectlombok:lombok' // 롬복
	implementation 'javax.xml.bind:jaxb-api:2.3.1' // XML 바인딩
	implementation 'com.google.code.gson:gson:2.10.1' // JSON 라이브러리
	implementation 'org.springdoc:springdoc-openapi-ui:1.6.12' // Swagger
	implementation 'org.modelmapper:modelmapper:3.1.1' // ModelMapper
	implementation 'commons-io:commons-io:2.13.0' // Apache Commons IO
	implementation 'com.google.guava:guava:32.1.2-jre' // Google Core Libraries For Java
	implementation 'com.github.napstr:logback-discord-appender:1.0.0' // Discord Appender

	// DB
	implementation 'org.postgresql:postgresql:42.6.0' // PostgreSQL JDBC Driver
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // Spring Data JPA
	implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final' // Bean Validation
	implementation 'javax.validation:validation-api:2.0.1.Final' // Javax Bean Validation
	implementation 'jakarta.validation:jakarta.validation-api:3.0.2' // Jakarta Bean Validation
	implementation 'com.maxmind.geoip2:geoip2:4.1.0' // GeoIP2

	// OAuth
	implementation 'org.springframework.boot:spring-boot-starter-security' // Spring Security
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client' // OAuth 2.0 Client
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server' // OAuth 2.0 Resource Server
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5' // JWT 라이브러리
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5' // JWT 구현체
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // JWT Jackson 모듈

	// XSS Filter
	implementation 'com.navercorp.lucy:lucy-xss-servlet:2.0.0' // Lucy XSS Servlet Filter
	implementation 'com.navercorp.lucy:lucy-xss:1.6.3' // Lucy XSS Filter
	implementation 'org.apache.commons:commons-text:1.10.0' // Apache Commons Text

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test' // Spring Boot Test
	testImplementation 'org.springframework.security:spring-security-test' // Spring Security Test
}

tasks.named('test') {
	useJUnitPlatform()
}
